[package]
name = "iroh-http-gateway"
version = "0.1.3"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
dumbpipe = "0.39"
hex = "0.4.3"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
iroh = "1.0.0"
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = "2.5.8"
